# ToDo-Api

./: README.md  config.py  pyproject.toml
app/: __init__.py
app/models/: __init__.py
app/nota/: __init__.py  route.py
instance/: site.db
migrations/versions/: d948ae5bd8c6_a.py
